--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "Lnch\\LaravelBouncer\\": "src"
     },
     "require-dev": {
-        "orchestra/testbench": "5.0"
+        "orchestra/testbench": "5.0",
+        "phpunit/phpunit": "^8.5"
     },
     "extra": {
         "laravel": {
