--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,9 @@
                 "Lnch\\LaravelBouncer\\LaravelBouncerServiceProvider"
             ]
         }
+    },
+    "scripts": {
+        "test": "/vendor/bin/phpunit",
+        "test-f": "/vendor/bin/phpunit --filter"
     }
 }
